# paystack

./: README.md  license.txt  pyproject.toml
paystack/: api.py  hooks.py  install.py
paystack/paystack/doctype/paystack_settings/: paystack_settings.js  paystack_settings.json  paystack_settings.py
paystack/www/: payment-failed.html  payment-success.html
