[project]
name = "paystack"
authors = [
    { name = "Rockify", email = "payments@rockifyerp.com" },
]
description = "Paystack payment gateway integration for ERPNext / Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Frappe and the Payments app are installed and managed by bench.
    # "frappe"
    # "payments"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
